# condor-bench

./: .env.example  .gitignore  Create benchmark for agent LLMs.md  FRAMEWORK_IMPROVEMENTS.md  Makefile  README.md  config.py  pyproject.toml  runner.py
baseline/: c001.json  c002.json  c003.json  c004.json  c005.json  c006.json  c007.json  c008.json  c009.json  c010.json  c011.json  c012.json  c013.json  c014.json  c015.json  rb001.json  rb002.json  rb003.json  rb004.json  sc001.json  sc002.json  sc003.json  sc004.json  t001.json  t002.json  t003.json  t004.json  t005.json  t006.json
bench/: __init__.py  baseline.py  client.py  dataset.py  reporter.py  scorer.py
condor_compat/: __init__.py
condor_compat/acp/: acp_client.py  client.py  jsonrpc.py  pydantic_ai_client.py
condor_compat/agents/: prompts.py
condor_compat/assistants/condor/: AGENT.md
dashboard/: app.py
dashboard/backend/: app.py
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.jsx  api.js  casePrompts.json  styles.css  utils.js
dashboard/frontend/src/components/: CaseTable.jsx  CustomPrompt.jsx  Leaderboard.jsx  LiveRun.jsx  RunConfig.jsx  Runs.jsx
datasets/: EXPECTED_RESPONSES.md  consult.jsonl  tick.jsonl
metrics/: __init__.py  answer_quality.py  judge.py  latency.py  tool_accuracy.py
mock_mcp/: condor_server.py  hummingbot_server.py  server.py
tests/: test_scoring_fixes.py
